--- a/docs/fr/Bash/Introduction.tex
+++ b/docs/fr/Bash/Introduction.tex
@@ -3,13 +3,15 @@
 \usepackage[utf8]{inputenc}     % Encodage du texte
 \usepackage[french]{babel}      % Langue
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
-\usepackage[T1]{fontenc}
-\usepackage{color}
-\usepackage{fancyhdr}
+\usepackage[T1]{fontenc}					%
+\usepackage[usenames,dvipsnames]{xcolor}	% Coloration de texte
+\usepackage{verbatim}						% Mise en page de paragraphes
+\usepackage{fancyhdr}						%
 
 \fontfamily{}
 
-\title{Introduction à Bash Utils}
+\pagecolor{black}
+\title{\color{red}Introduction à Bash Utils}\color{white}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
@@ -23,6 +25,10 @@
   /Keywords ()
 }
 
+% Définition de couleurs
+\definecolor{mauve}{RGB}{128, 0, 128}
+
+
 % TODO : Justifier chaque paragraphe du document.
 \begin{document}
 \maketitle
@@ -31,53 +37,63 @@
 \tableofcontents
 \newpage
 
-\section{Introduction à Bash Utils}
-\subsection{Présentation}
-Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.
+\color{red}
+\section{Introduction à Bash Utils}\color{white}
 
-Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système d'exploitation, ainsi qu'avec ses différents programmes.
+\color{green}
+\subsection{Présentation}\color{white}
+Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.\linebreak
 
-Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix s'explique par la très vaste documentation disponible, ainsi que pour sa
+Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système d'exploitation, ainsi qu'avec ses différents programmes.\linebreak
 
-\subsection{Utilisation}
+Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix s'explique non seulement par sa vaste présence, mais aussi par sa très vaste documentation disponible.
+
+\color{green}
+\subsection{Utilisation}\color{white}
 Pour utiliser cette librairie, il vous suffira de sourcer deux fichiers :
 \begin{itemize}
-    \item \textbf{\$HOME/.bash\_profile} : Ce fichier à sourcer en tout premier lieu doit contenir les variables suivantes :
+    \item \color{orange}\textbf{\$HOME\color{lime}/.bash\_profile}\color{white} : Ce fichier à sourcer en tout premier lieu doit contenir les variables suivantes :
     \begin{itemize}
-        \item \textbf{\$\_\_BASH\_UTILS\_ROOT} : Contient le chemin vers le dossier racine de la librairie, appelé \textbf{Bash-utils}.
-        \item \textbf{\$\_\_BASH\_UTILS} : Contient le chemin vers le fichier d'initialisation.
+        \item \color{orange}\textbf{\$\_\_BASH\_UTILS\_ROOT}\color{white} : Contient le chemin vers le dossier racine de la librairie, appelé \color{lime}\textbf{Bash-utils}\color{white}.
+        \item \color{orange}\textbf{\$\_\_BASH\_UTILS}\color{white} : Contient le chemin vers le dossier du fichier d'initialisation, de préférence en appelant la variable précédente.\linebreak
     \end{itemize}
 
-    \item \textbf{Initializer.sh} : Ce fichier est l'initialiseur de la librairie Bash-utils. Ils doit être sourcé en deuxième lieu.
-    
-    \item Pour en savoir plus sur les instructions concernant le fichier \textbf{.bash\_profile}, veuillez consulter la section <> du fichier "Installation.pdf".
+    \item \color{lime}\textbf{Initializer.sh}\color{white} : Ce fichier est l'initialiseur de la librairie Bash Utils. Il doit être sourcé en deuxième lieu.
+
 \end{itemize}
+	Pour en savoir plus sur les instructions concernant le fichier \color{lime}\textbf{.bash\_profile}\color{white}, veuillez consulter la sous-section \textbf{Configurations} plus bas.
 
 
-\subsection{Architecture}
-Bash Utils est un ensemble de fichiers shell à sourcer dans un script, servant de fichiers source, de fichiers de configuration, d'outils de développement ou encore de scripts déjà prêts à l'exécution.
+\color{green}
+\subsection{Architecture}\color{white}
+Bash Utils est un ensemble de fichiers shell à sourcer dans un script (servant de fichiers source), de fichiers de configuration, d'outils de développement ou encore de scripts déjà prêts à l'exécution.
 
-Liste des dossiers :
-\subsubsection{bin}
+Les dossiers contenus dans  :
+\color{blue}
+\subsubsection{bin}\color{white}
 Ce dossier contient les fichiers exécutables nécessaires au bon fonctionnement de la librairie.
 
-\subsubsection{config}
-Ce dossier contient les fichiers de configuration de la librairie, tel que celui traitant les variables de statut.
+\color{blue}
+\subsubsection{config}\color{white}
+Ce dossier contient les fichiers de configuration de la librairie.
 
-\subsubsection{docs}
-Ce dossier contient toute la documentation utile aux développeurs.
+\color{blue}
+\subsubsection{docs}\color{white}
+Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs.
 
-\subsubsection{install}
+\color{blue}
+\subsubsection{install}\color{white}
 Ce dossier contient les fichiers et dossiers nécessaires à l'installation automatique de la librairie.
 
-\subsubsection{lib}
+\color{blue}
+\subsubsection{lib}\color{white}
 Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie (fonctions et variables), ainsi que le fichier d'initialisation à sourcer dans un script principal.
 
 Il contient trois sous-dossiers :
 \begin{itemize}
-    \item \textbf{functions} : ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.
-    \item \textbf{lang} : ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
-    \item \textbf{variables} : ce sous-dossier contient tous les fichiers enregistrant des variables.
+    \item \color{lime}\textbf{functions}\color{white} : ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.
+    \item \color{lime}\textbf{lang}\color{white} : ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
+    \item \color{lime}\textbf{variables}\color{white} : ce sous-dossier contient tous les fichiers enregistrant des variables.
 \end{itemize}
 
 Description des sous-dossiers du dossier \textbf{functions}
@@ -87,48 +103,59 @@ Chaque fichier contient des fonctions qui sont propres au nom du fichier. Par ex
 
 Les trois sous-dossiers du dossier \textbf{functions} ont été créés pour différencier les différentes catégories de fichiers de fonctions (dans le dossier \textbf{functions}) :
 \begin{itemize}
-    \item \textbf{basis} : les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).
+    \item \color{lime}\textbf{basis}\color{white} : les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).
     
-    \item \textbf{main} : les fonctions standard (traitement de fichiers, de dossiers, de permissions, gestion du temps, etc...)
+    \item \color{lime}\textbf{main}\color{white} : les fonctions standard (traitement de fichiers, de dossiers, de permissions, gestion du temps, etc...)
 
     Ces fonctions dépendent des fonctions contenues dans les fichiers du dossier "basis".
 
-    \item \textbf{os\_specific} : les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)
+    \item \color{lime}\textbf{os\_specific}\color{white} : les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)
 \end{itemize}
 
 \paragraph{lang}
-Le fichier \textbf{lang.csv} contient les différentes traductions de la librairie dans un fichier au format CSV.
+Rappel : fonctionnalité future, certaines idées peuvent encore changer.
+
+Le fichier \color{lime}\textbf{lang.csv}\color{white} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.
 
 \paragraph{variables}
+Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \color{lime}\textbf{colors.var}\color{white} sont des variables définissant le code de la couleur d'un texte à afficher.
 
-\subsubsection{projects}
+\color{blue}
+\subsubsection{projects}\color{white}
 Ce dossier contient non seulement des scripts facilitant l'utilisation du shell Bash sur un système UNIX, mais aussi des scripts facilitant le développement de la librairie Bash Utils.
 
-\subsubsection{tmp}
+\color{blue}
+\subsubsection{tmp}\color{white}
 Ce dossier sert à enregistrer les fichiers temporaires générés par un projet, tels que des fichiers de logs.
 
+Il n'est créé que pendant l'exécution d'un projet, pendant la partie d'initialisation. Il n'est pas effacé par la suite.
 
-\section{Fonctionnement}
+
+\color{red}
+\section{Fonctionnement}\color{white}
 Au vu du nombre de fichiers, il serait très fastidieux de mettre à jour chaque script pour sourcer de nouveaux fichiers, voire même de sourcer manuellement chaque fichier, puis de déclarer des variables, quelques fonctions, de configurer et vérifier chaque étape d'initialisation du script principal.
 
 Il serait même encore plus fastidieux de réécrire tout ce code, ainsi que de le modifier dans chaque fichier en cas d'ajout de fonctionnalités ou en cas de bug.
 
-Fort heureusement, un script shell s'occupe de cette partie : \textbf{Initializer.sh}, dans le dossier \textbf{lib}.
+Fort heureusement, un script shell s'occupe de cette partie : \color{lime}\textbf{Initializer.sh}\color{white}, dans le dossier \color{lime}\textbf{lib}\color{white}.
 
-La seule procédure que vous devez réaliser dans votre script pour utiliser les fonctionnalités proposées par Bash Utils est de sourcer ce fichier d'initialisation. Il s'occupera de réaliser toutes les étapes ci-dessous :
+Les deux seules procédures que vous devez réaliser dans votre script pour utiliser les fonctionnalités proposées par Bash Utils est de sourcer le fichier \color{orange}\textbf{\$HOME\color{lime}/.bash\_profile}\color{white}, puis ce fichier d'initialisation. Il s'occupera de réaliser toutes les étapes ci-dessous :
 
-\subsection{Étapes d'initialisation}
-En premier lieu, le script d'initialisation initialise les variables globales contenant les chemins utiles à la recherche des chemins des dossiers de la librairie (\textbf{BASH\_UTILS}), ainsi que celles enregistrant les chemins du projet.
+\color{green}
+\subsection{Étapes d'initialisation}\color{white}
+En premier lieu, le script d'initialisation initialise les variables globales contenant les chemins des multiples dossiers et fichiers de la librairie Bash Utils, ainsi que celles enregistrant les chemins du projet.
+
+Ces variables sont définies dans le fichier \color{lime}\textbf{config/Init.conf}\color{white}.
 
 En second lieu, il définit les fonctions utiles à l'initialisation de Bash Utils.
 
-En troisième lieu, le script crée le dossier temporaire du projet s'il n'existe pas déjà, puis dans ce dossier, il crée un fichier où seront redirigées les informations concernant le déroulé de la quatrième étape, avant de vérifier si les chemins contenus dans les variables \textbf{"BASH\_UTILS\_"} initialisées dans la première étape existent.
+En troisième lieu, le script crée le dossier temporaire du projet s'il n'existe pas déjà, puis dans ce dossier, il crée un fichier où seront redirigées les informations concernant le déroulé de la quatrième étape, avant de vérifier si les chemins contenus dans les variables \color{orange}\textbf{\$\_\_BASH\_UTILS\_*}\color{white} initialisées dans la première étape existent.
 
-En quatrième lieu, le script source tous les fichiers de fonctions et de variables des sous-dossiers du dossier \textbf{lib}
+En quatrième lieu, le script source tous les fichiers de fonctions et de variables des sous-dossiers du dossier \color{lime}\textbf{lib}\color{white}.
 
 En cinquième lieu, le script :
 \begin{itemize}
-    \item Crée une variable nommée \textbf{PROJECT\_PATH}, enregistrant le chemin du fichier de script principal par le biais de la fonction \textbf{GetParentDirectoryPath} du fichier \textbf{functions/main/Directories.lib}. 
+    \item Crée une variable nommée \color{orange}\textbf{\$\_\_PROJECT\_PATH}\color{white}, enregistrant le chemin du fichier de script principal par le biais de la fonction \color{mauve}\textbf{GetParentDirectoryPath}\color{white} du fichier \color{lime}\textbf{functions/main/Directories.lib}\color{white}.
     
     \item Modifie plusieurs variables de statut pour rendre la partie d'initialisation invisible à l'utilisateur final.
     
@@ -136,9 +163,31 @@ En cinquième lieu, le script :
 \end{itemize}
 
 
+\color{red}
+\section{Documentations des fonctions et des variables de Bash Utils}\color{white}
 
-\section{Installation de Bash Utils}
+\color{green}
+\subsection{Fonctions}\color{white}
+Tous les fichiers de documentation concernant la description des fonctions se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/functions}\color{white}.
 
-\section{Documentations des fonctions et des variables de Bash-Utils}
+\color{green}
+\subsection{Variables}\color{white}
+Tous les fichiers de documentation concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.
+
+\color{red}
+\section{Installation de Bash Utils}\color{white}
+
+\color{green}
+\subsection{Configurations}\color{white}
+
+\begin{verbatim}
+Pour utiliser les fonctionnalités de la librairie depuis n'importe quel chemin sans avoir à réécrire le chemin du fichier d'initialisation dans une myriade de fichiers éparpillés sur le disque dur, il est fortement recommandé de créer un fichier (s'il n'existe pas encore) nommé \color{lime}\textbf{.bash\_profile}\color{white} dans votre dossier personnel, ainsi que dans le dossier personnel du super-utilisateur (dans le dossier \color{lime}\textbf{/root}\color{white}) pour tout script lancé avec les privilèges du super-utilisateur.
+\end{verbatim}
+
+\color{green}
+\subsection{Installation}\color{white}
+
+\color{green}
+\subsection{Mise à jour}\color{white}
 
 \end{document}
