--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -14,18 +14,18 @@
 \fontfamily{}
 
 \pagecolor{black}
-\title{\color{red}Tutoriels d'aide aux ajouts basiques}\color{white}
+\title{\color{red}Tutoriels d'aide aux ajouts basiques\\ dans le module principal}\color{white}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
 \justifying
 
 \pdfinfo{
-  /Title    (Tutoriels d'aide aux ajouts basiques)
+  /Title    (Tutoriels d'aide aux ajouts basiques dans le module principal)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Tutoriels d'aide aux ajouts basiques)
+  /Subject  (Tutoriels d'aide aux ajouts basiques dans le module principal)
   /Keywords ()
 }
 
@@ -52,6 +52,7 @@
 
 \color{blue}
 \subsubsection{Fichiers de configuration à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main/LangCSVCode.conf}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main/LangISOCode.conf}
@@ -64,6 +65,7 @@
 
 \color{blue}
 \subsubsection{Fichiers de librairie à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/lang/SetLibLang.sh}
 \end{itemize}
@@ -74,6 +76,7 @@
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
+
 Ouvrez le fichier de configuration \textbf{\color{lime}LangCSVCode.conf}, puis dans la liste des variables globales,\linebreak créez une variable globale nommée \textbf{\color{orange}\_\_BU\_MAIN\_LANG\_CSV\_CODE\_}, suivie immédiatement du code\linebreak ISO 639-1 de la langue que vous souhaitez ajouter.\\[1\baselineskip]
 
 Ensuite, ouvrez le fichier de librairie \textbf{\color{lime}SetLibLang.sh}, puis rendez-vous dans la fonction \textbf{\color{mauve}SetLibLang}. Une fois dedans, ajoutez une nouvelle condition dans la structure de contrôle \textbf{case}, en écrivant le code ISO 639-1 de la langue cible, suivi d'un tiret du 8 '\_', utilisé par le système pour relier ce code avec le code du pays ISO 3166, avant d'ajouter une étoile '*' pour ne pas à se soucier de la gestion des différences de langue par pays.\\[1\baselineskip]
@@ -82,16 +85,20 @@ Une fois la condition créée, définissez la en créant une variable nommée \t
 
 Appelez ensuite la fonction \textbf{\color{mauve}ParseCSVLibLang}, en lui passant en argument : 
 \begin{itemize}
-    \item Le chemin du fichier de traduction de la librairie (vous pouvez passer en argument la valeur \textbf{\color{orange}\$\_\_BU\_MAIN\_MODULE\_LIB\_LANG\_DIR\_PATH\color{lime}/lang.csv})
-    \item La variable globale \textbf{\color{orange}\$\_\_BU\_MAIN\_LANG}, qui enregistre la langue choisie, définie plus bas dans le fichier, dans la fonction \textbf{\color{mauve}GetLibLang}.
-    \item Le message de succès de recherche du chemin du fichier CSV, dans la langue que vous\linebreak souhaitez définir.
-    \item Le message d'erreur du header de la fonction \textbf{\color{mauve}HandleErrors}
+    \item Le chemin du fichier de traduction de la librairie (vous pouvez passer en argument la valeur \textbf{\color{orange}\$\_\_BU\_MAIN\_MODULE\_LIB\_LANG\_DIR\_PATH\color{lime}/lang.csv})\\[1\baselineskip]
+
+    \item La variable globale \textbf{\color{orange}\$\_\_BU\_MAIN\_LANG}, qui enregistre la langue choisie, définie plus bas dans le fichier, dans la fonction \textbf{\color{mauve}GetLibLang}.\\[1\baselineskip]
+
+    \item Le message de succès de recherche du chemin du fichier CSV, dans la langue que vous\linebreak souhaitez définir.\\[1\baselineskip]
+
+    \item Le message d'erreur du header de la fonction \textbf{\color{mauve}HandleErrors}\\[1\baselineskip]
+
     \item Le message de conseil de la fonction \textbf{\color{mauve}HandleErrors}\\[1\baselineskip]
 \end{itemize}
 
 Pour plus de praticité, vous pouvez créer un fichier nommé \textbf{\color{lime}LangISOCode.conf} dans le dossier\linebreak \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}, et écrire le code ISO 639-1 de votre langue,\linebreak suivie du code ISO 3166 d'un des pays où la langue à ajouter est parlée.\\[1\baselineskip]
 
-Pour encore plus de praticité, si la langue que vous souhaitez ajouter est définie dans les paramètres de votre système d'exploitation, vous pouvez taper la commande suivante,en remplaçant la variable \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT} par le chemin de la racine du dossier de configurations de Bash Utils (normalement localisé dans votre dossier personnel) :
+Pour encore plus de praticité, si la langue que vous souhaitez ajouter est définie dans les paramètres de votre système d'exploitation, vous pouvez taper la commande suivante, en remplaçant la variable \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT} par le chemin de la racine du dossier de configurations de Bash Utils (normalement localisé dans votre dossier personnel) :
 \begin{itemize}
     \item \textbf{\color{gray}echo \color{orange}\$LANG \color{white} > "\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main/LangISOCode.conf\color{white}"}
 \end{itemize}
@@ -108,6 +115,7 @@ Pour encore plus de praticité, si la langue que vous souhaitez ajouter est déf
 
 \color{blue}
 \subsubsection{Fichiers de configuration à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}}
 \end{itemize}
@@ -119,6 +127,7 @@ Pour encore plus de praticité, si la langue que vous souhaitez ajouter est déf
 
 \color{blue}
 \subsubsection{Fichiers de librairie à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}}
 \end{itemize}
@@ -141,8 +150,9 @@ Pour encore plus de praticité, si la langue que vous souhaitez ajouter est déf
 
 \color{blue}
 \subsubsection{Fichiers de configuration à éditer}\color{white}
+
 \begin{itemize}
-    \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/module/main/colors.conf}
+    \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/module/main/colors.conf}\\[1\baselineskip]
 \end{itemize}
 
 
@@ -152,9 +162,10 @@ Pour encore plus de praticité, si la langue que vous souhaitez ajouter est déf
 
 \color{blue}
 \subsubsection{Fichiers de librairie à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Decho.lib}
-    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Headers.lib}
+    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/Headers.lib}\\[1\baselineskip]
 \end{itemize}
 
 
@@ -164,6 +175,7 @@ Pour encore plus de praticité, si la langue que vous souhaitez ajouter est déf
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
+
 Dans le fichier de configuration \textbf{\color{lime}colors.conf}, repérez la section \textbf{COLOR ENCODING}, puis la sous-section \textbf{COLOR CODES FOR ENCODING}, puis créez une nouvelle variable globale de code couleur, de préférence nommée :
 \begin{itemize}
     \item \textbf{\color{orange}\_\_BU\_MAIN\_COLOR\_CODE\_<\$nom\_de\_la\_couleur\_en\_anglais>}\\[1\baselineskip]
@@ -241,8 +253,9 @@ bicolore pour vous aider.\\[1\baselineskip]
 
 \color{blue}
 \subsubsection{Fichiers à exécuter}\color{white}
+
 \begin{itemize}
-    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/res/dev-tools/dev-bin/mkmodules.sh}
+    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/res/dev-tools/dev-bin/mkmodules.sh}\\[1\baselineskip]
 \end{itemize}
 
 
@@ -252,6 +265,7 @@ bicolore pour vous aider.\\[1\baselineskip]
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
+
 \textbf{De manière automatique :}
 \begin{itemize}
     \item Rendez-vous EXACTEMENT dans le dossier du fichier shell \textbf{\color{lime}mkmodules.sh}, puis exécutez juste\linebreak
@@ -266,7 +280,7 @@ bicolore pour vous aider.\\[1\baselineskip]
     le dossier \textbf{\color{lime}config/modules}. Créez un nouveau dossier pour chaque module à créer, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}module.conf}.\\[1\baselineskip]
 
     \item Revenez de nouveau dans le dossier racine \textbf{\color{lime}.Bash-utils}, puis allez dans le dossier \textbf{\color{lime}modules}.\linebreak
-    Créez un nouveau dossier pour chaque module, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}Initializer.sh}.
+    Créez un nouveau dossier pour chaque module, puis dans chacun de ces dossiers, créez un fichier nommé \textbf{\color{lime}Initializer.sh}.\\[1\baselineskip]
 \end{itemize}
 
 % -----------------------------------------------
@@ -278,8 +292,9 @@ bicolore pour vous aider.\\[1\baselineskip]
 
 \color{blue}
 \subsubsection{Fichiers de configuration à éditer}\color{white}
+
 \begin{itemize}
-    \item \textbf{\color{orange}\$\_\_BU\_MODULES\_UTILS\_ROOT\color{lime}/config/modules/main/Status.conf}
+    \item \textbf{\color{orange}\$\_\_BU\_MODULES\_UTILS\_ROOT\color{lime}/config/modules/main/Status.conf}\\[1\baselineskip]
 \end{itemize}
 
 % -----------------------------------------------
@@ -288,8 +303,11 @@ bicolore pour vous aider.\\[1\baselineskip]
 
 \color{blue}
 \subsubsection{Fichiers de librairie à éditer}\color{white}
+
 \begin{itemize}
-    \item \textbf{Tout fichier où vous avez créé une nouvelle fonction ou modifié une fonction existante, où vous souhaitez appeler cette variable}
+    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main/CheckSTAT.lib}\\[1\baselineskip]
+
+    \item \textbf{Tout fichier où vous avez créé une nouvelle fonction ou modifié une fonction existante, où vous souhaitez appeler cette variable}\\[1\baselineskip]
 \end{itemize}
 
 % -----------------------------------------------
@@ -299,6 +317,48 @@ bicolore pour vous aider.\\[1\baselineskip]
 \color{blue}
 \subsubsection{Consignes}\color{white}
 
+Rendez vous dans le fichier de configurations \textbf{\color{lime}Status.conf}, puis créez une nouvelle variable commençant par \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_}, puis, de préférence en anglais, nommez le reste de la variable selon l'action nécessitant l'appel de cette variable.\\[1\baselineskip]
+
+Comme les autres variables définies dans ce fichier, décrivez brièvement le but de cette variable, puis indiquez quelles valeurs sont acceptées, avant de définir une valeur par défaut, tout en prenant le soin, si vous utilisez l'utilitaire \textbf{\color{gray}Shellcheck}, de désactiver l'affichage du message d'avertissement retourné avec le code \textbf{SC2034}, vous indiquant que la variable est définie, mais non-utilisée dans ce fichier.\\[1\baselineskip]
+
+Une fois la nouvelle variable créée, rendez-vous dans le fichier de librairie \textbf{\color{lime}CheckSTAT.lib}, dans la sous-section \textbf{CHECKINGS} puis créez une fonction dont le nom commence par \textbf{\color{mauve}CheckSTAT\_}, puis ajoutez-y le nom de la variable de statut que vous venez de créer dans le fichier précédent, sans le double tiret du 8.\\[1\baselineskip]
+
+Copiez-collez la définition des paramètres de n'importe quelle autre fonction, puis définissez une section de variables, où vous créerez un tableau (\textbf{pa\_correctValues} par exemple, en y passant la déclaration \textbf{\color{gray}local} au préalable pour assurer que ce dernier n'ait qu'une portée locale (CÀD dans la fonction en elle même, sans accès via l'extérieur)) dans lequel vous passerez en valeurs les valeurs acceptées pour cette nouvelle variable de statut.\\[1\baselineskip]
+
+Dans la section \textbf{code}, ajoutez une nouvelle condition où vous vérifirez si la valeur de votre variable de statut est différente de chacune des valeurs définies dans le tableau défini dans la section \textbf{Variables}.\\[1\baselineskip]
+
+Dans cette condition, appelez la fonction \textbf{\color{mauve}ConfEcho}, puis passez en arguments :
+\begin{itemize}
+    \item Le paramètre \textbf{\color{orange}\$p\_file}\\[1\baselineskip]
+
+    \item Le paramètre \textbf{\color{orange}\$p\_lineno}\\[1\baselineskip]
+
+    \item Le nom de la variable.\\[1\baselineskip]
+
+    \item Idem, mais sans le signe \textbf{\$}\\[1\baselineskip]
+
+    \item Le tableau de valeurs.\\[1\baselineskip]
+\end{itemize}
+
+Puis n'oubliez pas d'appelez la déclaration \textbf{\color{gray}return} en lui passant la valeur 1, indiquant que l'exécution de la fonction ne s'est pas déroulée correctement.\\[1\baselineskip]
+
+Puis à l'extérieur de la condition, appelez de nouveau la déclaration \textbf{\color{gray}return} en lui passant cette fois la valeur 0.\\[1\baselineskip]
+
+Une fois ceci fait, rendez vous tout à la fin de la sous-section actuelle, dans la fonction \textbf{\color{mauve}CheckProjectStatusVars}, puis appelez-y la ou les fonctions que vous venez de créer, en y passant en argument les variables \textbf{\color{orange}\$p\_file} et \textbf{\color{orange}\$p\_lineno}.\\[2\baselineskip]
+
+
+Maintenant, rendez vous dans la sous-section \textbf{CHANGING VALUES MORE EASILY}. Créez une nouvelle fonction, dont le nom commence par \textbf{\color{mauve}ChangeSTAT\_}, suivie du nom de votre variable de statut, sans le \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT}.\\[1\baselineskip]
+
+Dans cette nouvelle fonction, appelez votre fonction fraîchement créée en redéfinissant votre variable de statut (l'écrire sans le signe \textbf{\$}), en lui passant le paramètre positionnel \textbf{\$l}; puis appelez la fonction que vous avez créé en lui passant en arguments les paramètres positionnels \textbf{\$2} et \textbf{\$3}.\\[1\baselineskip]
+
+N'oubliez pas les déclarations de retour (\textbf{\color{gray}return 1} et \textbf{\color{gray}return 0})\\[2\baselineskip]
+
+
+Enfin, \textbf{SI et seulement SI} votre nouvelle variable accepte seulement les valeurs \textbf{true} ou \textbf{false}, rendez vous dans la sous-section \textbf{EASIER CHECKING BOOLEAN VALUES} pour créer une dernière fonction que vous nommerez \textbf{\color{mauve}CheckStat} (attention à la casse), suivie du nom de l'action accomplie par votre nouvelle variable (regardez les noms des fonctions existantes pour vous donner une idée).\\[1\baselineskip]
+
+Il est recommandé de vérifier si la valeur enregistrée dans votre variable soit égale à vrai (\textbf{true}), et de retourner 0, et 1 le cas échéant.\\[2\baselineskip]
+
+Maintenant, vous pouvez utiliser cette nouvelle variable et ces nouvelles fonctions là où vous le souhaitez dans le module principal, voire dans un autre module, puis dans vos propres scripts.\\[1\baselineskip]
 
 % -----------------------------------------------
 
@@ -309,6 +369,7 @@ bicolore pour vous aider.\\[1\baselineskip]
 
 \color{blue}
 \subsubsection{Fichiers à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{lime}\color{white}}
 \end{itemize}
@@ -331,6 +392,7 @@ bicolore pour vous aider.\\[1\baselineskip]
 
 \color{blue}
 \subsubsection{Fichiers à éditer}\color{white}
+
 \begin{itemize}
     \item \textbf{\color{lime}\color{white}}
 \end{itemize}
