--- a/docs/fr/modules/main/functions/CheckSTAT.tex
+++ b/docs/fr/modules/main/functions/CheckSTAT.tex
@@ -139,6 +139,7 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
 \color{blue}
 \subsubsection{ConfEcho}\color{white}
+
 \begin{flushleft}
 	\textbf{Description de la fonction :}\\
    	Cette fonction retourne un message d'erreur en cas de mauvaise valeur définie dans une variable de statut.\\[1\baselineskip]
@@ -181,6 +182,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_DEBUG}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}\\
     Cette variable de statut sert à lancer un déboguage de certaines fonctionnalités (dans une section de code écrite de préférence au début du script principal), sans attendre l'atteinte à cette fonctionnalité si le code de cette dernière est écrit trop loin dans un script.\\[1\baselineskip]
@@ -216,6 +218,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_DECHO}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -255,6 +258,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_ECHO}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}\\
     Cette variable de statut sert à empêcher l'exécution de la fonction \textbf{\color{mauve}CheckProjectLogStatus}, notamment dans le cas où une fonction d'affichage de texte formaté est appelée à l'intérieur de cette fonction, où via une autre fonction appelée dans le même cas.\\[1\baselineskip]
@@ -283,6 +287,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_ERROR}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}\\
     Cette variable de statut sert à déterminer la gravité d'une erreur selon le contexte. Ce choix est à déterminer par l'utilisateur, et cette variable est traitée par la fonction \textbf{\color{mauve}HandleErrors()} du fichier de librairie \textbf{\color{lime}Checkings.lib}.\\[1\baselineskip]
@@ -318,6 +323,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_INITALIZING}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}\\
     Cette variable de statut sert à indiquer si la librairie est en phase d'initialisation des modules.\\[1\baselineskip]
@@ -346,6 +352,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_LOG}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -378,6 +385,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_LOG\_REDIRECT}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -406,6 +414,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_OPERATE\_ROOT}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -437,6 +446,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_PRINT\_INIT\_LOG}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -469,6 +479,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckSTAT\_TIME\_TXT}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -476,7 +487,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
     \end{itemize}
 
     \item \textbf{Description de la fonction :}\\
-    Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\ \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_TIME\_TXT} soit un nombre entier ou décimal.\\[1\baselineskip]
+    Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_TIME\_TXT} soit un nombre entier ou décimal.\\[1\baselineskip]
 
     \item \textbf{Paramètres :}
     \begin{itemize}
@@ -500,7 +511,71 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
+\subsubsection{CheckSTAT\_TRANSLATED}\color{white}
+
+\begin{itemize}
+    \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item Cette variable de statut .\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_PRINT\_INIT\_LOG} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+
+    \item \textbf{Paramètres :}
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Code :}
+\end{itemize}
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{CheckSTAT\_TXT\_FMT}\color{white}
+\begin{itemize}
+    \item \textbf{Description de la variable :}
+    \begin{itemize}
+        \item Cette variable de statut .\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Description de la fonction :}\\
+        Cette fonction vérifie que la valeur enregistrée dans la variable de statut\\ \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_PRINT\_INIT\_LOG} corresponde aux chaînes de caractères \textbf{true} ou \textbf{false}.\\[1\baselineskip]
+
+    \item \textbf{Paramètres :}
+    \begin{itemize}
+        \item \color{orange}\textbf{\$p\_file}\color{white} : fichier dans lequel cette fonction est appelée (de préférence avec la commande \textbf{"\$(\color{gray}basename \color{white}"\color{orange}\$BASH\_SOURCE[0]\color{white}")")}\\[1\baselineskip]
+
+        \item \color{orange}\textbf{\$p\_lineno}\color{white} : le numéro de ligne où cette fonction est appelée (de préférence avec la variable d'environnement \textbf{\color{orange}\$LINENO}))\\[1\baselineskip]
+    \end{itemize}
+
+    \item \textbf{Variables :}
+    \begin{itemize}
+        \item \textbf{\color{orange}\$v\_array\color{white} :}\\[1\baselineskip]
+    \end{itemize}
+
+
+    \item \textbf{Code :}
+\end{itemize}
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
 \subsubsection{CheckSTAT\_USER\_OS}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la variable :}
     \begin{itemize}
@@ -535,6 +610,7 @@ Cette section contient toutes les fonctions vérifiant que la variable de statut
 
 \color{blue}
 \subsubsection{CheckProjectStatusVars}\color{white}
+
 \begin{itemize}
     \item \textbf{Description de la fonction :}\\
     Cette fonction\\[1\baselineskip]
